# extxyz-ng

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-py.yaml  ci-rs.yml  ci.yml  crate-publish.yaml  pypi-publish.yaml
extxyz/: Cargo.toml  perf.data  perf.data.old
extxyz-sys/: Cargo.toml  README.md
extxyz-sys/examples/: read_frame_legacy_c.rs
extxyz-sys/src/: lib.rs
extxyz-types/: Cargo.toml
extxyz-types/src/: lib.rs
extxyz/benches/: 6M0J.xyz  6VXX.xyz  read_frame_alloc_vs_opt_alloc.rs  read_frame_rs_vs_c.rs
extxyz/examples/: read_frame.rs  read_frame_legacy_c.rs  read_frames.rs
extxyz/src/: error.rs  lib.rs  read.rs  write.rs
python/: Cargo.toml  README.md  devenv.nix  devenv.yaml  pyproject.toml
python/extxyz/: __init__.py  extxyz.pyi
python/src/: lib.rs
python/tests/: __init__.py  _cextxyz_compatible.py  mgb.xyz  mgb_multi_frames.xyz  test_default.py  test_interop.py
