[package]
name = "extxyz-sys"
description = "Unsafe bindings for libAtoms/extxyz"
authors = ["Jusong Yu <jusong.yu@pm.me>"]
repository = "https://github.com/extxyz/extxyz-rs"
build = "build.rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["physics", "chemistry"]
categories = ["external-ffi-bindings", "simulation"]
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.177"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.72.1"

