[package]
name = "extxyz-types"
description = "types for extxyz-sys and extxyz"
authors = ["Jusong Yu <jusong.yu@pm.me>"]
repository = "https://github.com/extxyz/extxyz-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["physics", "chemistry"]
categories = ["simulation"]
version = "0.1.0"
edition = "2021"

[dependencies]
# extxyz-sys = { path = "../extxyz-sys" }

