[package]
name = "extxyz-ng"
description = "extxyz format reader and writer"
authors = ["Jusong Yu <jusong.yu@pm.me>"]
repository = "https://github.com/extxyz/extxyz-ng"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["physics", "chemistry"]
categories = ["simulation"]
version = "0.1.0"
edition = "2021"

