[package]
name = "extxyz"
description = "Safe API for dealing with xyz (and extxyz) format for material structure"
authors = ["Jusong Yu <jusong.yu@pm.me>"]
repository = "https://github.com/extxyz/extxyz-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["physics", "chemistry"]
categories = ["simulation"]
version = "0.1.0"
edition = "2021"

[dependencies]
extxyz-types = { path = "../extxyz-types" }
nom = "8.0.0"

[dependencies.extxyz-sys]
path = "../extxyz-sys"
optional = true

[dev-dependencies]
criterion = "0.5"
extxyz-sys = { path = "../extxyz-sys" }

[[bench]]
name = "read_frame_alloc_vs_opt_alloc"
harness = false

[[bench]]
name = "read_frame_rs_vs_c"
harness = false

[[bin]]
name = "read_frame"
path = "bin/read_frame.rs"

[features]
legacy = ["extxyz-sys"]

[[bin]]
name = "read_frame_legacy_c"
path = "bin/read_frame_legacy_c.rs"

