[workspace]

[package]
name = "pyextxyz"
version = "0.1.0"
edition = "2021"
authors = ["Jusong Yu <jusong.yu@pm.me>"]
homepage = "https://github.com/extxyz/extxyz"

[lib]
name = "pyextxyz"
crate-type = ["cdylib"]

[dependencies]
extxyz = { package="extxyz", path = "../extxyz" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3", "abi3-py39", "auto-initialize"] }

[package.metadata.maturin]
python-source = "pyextxyz"

