[workspace]

[package]
name = "pyextxyz"
version = "0.0.1"
edition = "2021"
authors = ["Jusong Yu <jusong.yu@pm.me>"]
homepage = "https://github.com/extxyz/extxyz"

[lib]
name = "extxyz"
crate-type = ["cdylib"]

[dependencies]
extxyz = { package="extxyz-ng", path = "../extxyz" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3", "abi3-py310", "auto-initialize", "experimental-inspect"] }

[package.metadata.maturin]
python-source = "extxyz"

