[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "extxyz-ng"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "extxyz parser for python user"
readme = "README.md"
dynamic = ["version"]
license = "MIT AND Apache-2.0"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
include = ["py.typed", "*.pyi"]

[dependency-groups]
dev = [
    "pip", 
    "pytest>=8.0.2", 
    "ruff>=0.8.0", 
    "pre-commit>=4.0.1",
    "ipython",
    "mypy==1.19.1",
    "types-requests",
]

[project.optional-dependencies]
tests = [
    "pytest~=8.3",
]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "extxyz.*"

